Fix the issue of image not align center

--- a/source/css/_common/_component/posts-expand.styl
+++ b/source/css/_common/_component/posts-expand.styl
@@ -155,4 +155,4 @@
 
 .post-more-link { margin-top: 50px; }
 
-.posts-expand .fancybox img { margin: 0 auto; }
+.posts-expand .post-body .fancybox img { margin: 0 auto; }
